[package]
name = "map-gen-2d"
version = "0.1.0"
edition = "2021"
description = "2D map generation algorithms implementaion"
keywords = ["2d", "game development", "algorithm", "bsp"]
categories = ["2d", "game development", "algorithm", "bsp"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/theseatoad/map-gen-2d"
homepage = "https://github.com/theseatoad/map-gen-2d"

[dependencies]
anyhow = "1.0.68"
cairo = "0.0.4"
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
[[example]]
name = "bsp-map"
path = "examples/bsp-map.rs"
