[package]
name = "map-gen-2d"
version = "0.1.1"
edition = "2021"
description = "2D map generation algorithms implementaion"
keywords = ["2d", "procgen", "bsp"]
categories = ["2d", "procgen", "bsp"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/theseatoad/map-gen-2d"
homepage = "https://github.com/theseatoad/map-gen-2d"

[dependencies]
anyhow = "1.0.68"
rand = "0.8.5"
[[example]]
name = "bsp-map"
path = "examples/bsp-map.rs"
